--- a/app.json
+++ b/app.json
@@ -1,5 +1,6 @@
 {
   "expo": {
+    
     "name": "app",
     "slug": "app",
     "version": "1.0.0",
@@ -27,7 +28,9 @@
       "favicon": "./assets/images/favicon.png"
     },
     "plugins": [
-      "expo-router"
+      "expo-router",
+      "@react-native-firebase/app", 
+      "@react-native-firebase/auth"
     ],
     "experiments": {
       "typedRoutes": true
